<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/SettingScrollView" 
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"> 
    
<LinearLayout
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">
	
	<RelativeLayout
	    
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	
		<TextView 
			android:id="@+id/FileLabelImage"
			android:text="@string/file_select_label_image"
			android:textSize="19sp"
			android:width="100dip"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_marginLeft="50dip"
			android:layout_marginTop="20dip">
		</TextView>
		
		<ImageView 
		    android:id="@+id/FileImage"
		    android:contentDescription="@string/file_select_label_image"
		    android:layout_width="200dip"
			android:layout_height="200dip"
			android:layout_below="@+id/FileLabelImage"
			android:layout_marginLeft="10dip"
			android:layout_marginTop="5dip">
		</ImageView>
		
		<Button 
			android:id="@+id/FileButtonSelect"
		    android:text="@string/file_select_button_select" 
		    android:layout_width="100dip"
			android:layout_height="50dip"		    
			android:layout_alignParentRight="true" 
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/FileImage" 
			android:layout_marginTop="100dip">
		</Button>
	
	</RelativeLayout>
	
    <!-- プリンター -->
	<RelativeLayout   
	    android:layout_width="fill_parent"
   		android:layout_height="fill_parent">
   		
	    <TextView 
			android:id="@+id/SettingLabelPrinterName"
			android:textSize="19sp"
			android:text="@string/print_setting_label_printer_name"
			android:layout_width="120dip"
			android:layout_height="30dip">
		</TextView>
		
	   	<TextView
			android:id="@+id/SettingTextPrinterName"
			android:layout_toRightOf="@+id/SettingLabelPrinterName"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content">
	   	</TextView>
	   	
	</RelativeLayout>
	
	<!-- タイムアウト -->
	<RelativeLayout   
	    android:layout_width="fill_parent"
   		android:layout_height="fill_parent">
		
		<TextView
			android:id="@+id/SettingLabelTimeout" 
			android:text="@string/print_setting_label_timeout"
			android:textSize="19sp"
			android:layout_width="wrap_content" 
		    android:layout_height="wrap_content">
		</TextView>
		
		<EditText
	 		android:id="@+id/SettingEditTimeout"	    
			android:inputType="number"
	 		android:singleLine="true"
			android:layout_alignParentRight="true"		 		
		    android:layout_width="180dip" 
		    android:layout_height="wrap_content">
		</EditText>		
		
	</RelativeLayout>	

	<Button
		android:id="@+id/SettingButtonSearch"
		android:text="@string/print_setting_button_search"		
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</Button>
		
	<Button
		android:id="@+id/SettingButtonMenu"
		android:text="@string/print_setting_button_menu"		
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</Button>
		
	
</LinearLayout>
</ScrollView>